ros2_ws/log/build_2022-11-17_12-59-12/mypkg/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/dynepanch/ros2_ws/install/mypkg/lib/python3.10/site-packages/mypkg/listener.py", line 2
    rt rclpy
       ^^^^^
SyntaxError: invalid syntax

